# axum-graphql

./: .env  Cargo.toml
entity/: Cargo.toml
entity/src/: article.rs  db.rs  follow.rs  follows.rs  lib.rs  thanks.rs  user.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs  main.rs
src/: main.rs
src/graphql/: schema.rs
src/graphql/mutation/: article.rs  follow.rs  followed.rs  follows.rs  mod.rs  thanks.rs  user.rs
src/graphql/query/: article.rs  follow.rs  followed.rs  follows.rs  mod.rs  thanks.rs  user.rs
