[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
#chrono = "0.4.10"

[dependencies.async-graphql]
version = "3.0.12"

[dependencies.sea-orm]
version = "^0.7.0"
features = [
  "macros",
  #"with-chrono",
  #"debug-print",
  "runtime-tokio-native-tls",
  #"sqlx-sqlite",
  "sqlx-postgres"
]
default-features = false


